force-app/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF(CloseDate - TODAY()&gt;=0, TEXT(CloseDate - TODAY()), &quot;You have exceeded closed date&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <type>Text</type>
</CustomField>