force-app/main/default/objects/Opportunity/fields/Opportunity_Change_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Change_Tracker__c</fullName>
    <label>Opportunity Change Tracker</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>